# clinical-trials-research

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.json
notebooks/: 01-field-analysis.ipynb  02-embedding-detailed-descriptions.ipynb
scripts/: download_fields.py  download_fields_json.py  download_flatten_fields.py
src/ctr/: api.py  endpoints.py  fields.py  flatten_json.py  response.py  utils.py
tests/: test_api.py
