[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ctr"
version = "0.1.0"
description = "Clinical trials research project."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Anushka", email = "anushkakgupta@gmail.com" },
  { name = "Wuihee", email = "wuihee@gmail.com" },
]
dependencies = [
  "httpx",
  "jupyter",
  "matplotlib",
  "missingno",
  "nltk",
  "numpy",
  "pandas",
  "pydantic",
  "scikit-learn",
]

[project.optional-dependencies]
dev = ["tqdm"]
test = ["pytest"]
